# mark-viwer

./: .gitignore  DOCUMENTATION.md  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml  deploy.yml
app/: index.html
public/: landing.html
public/downloads/: install-markviewer.sh
src/: App.jsx  defaultContent.js  index.css  main.jsx  tauriHelpers.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AIPanel.jsx  AISettings.jsx  AIWidget.jsx  AnalyticsPanel.jsx  CheatsheetPanel.jsx  CommandPalette.jsx  ErrorBoundary.jsx  FileTabs.jsx  MarkdownEditor.jsx  MarkdownPreview.jsx  Navbar.jsx  RecentDocsPanel.jsx  SettingsPanel.jsx  ShortcutsPanel.jsx  StatusBar.jsx  TOCPanel.jsx  ThemePanel.jsx  Toolbar.jsx  WorkspacePanel.jsx  WorkspaceSidebar.jsx
src/hooks/: useAppState.js
src/lib/: aiClient.js  analytics.js  navigation.js  security.js  storage.js  themes.js  workspace.js
vscode-extension/: README.md  package.json  tsconfig.json
vscode-extension/src/: extension.ts
